# imago

./: .gitmodules  CMakeLists.txt  README.md
bindings/c/: CMakeLists.txt
cmake/: Boost.cmake  BuildOptions.cmake  Indigo.cmake  OpenCV.cmake
imago/src/: character_recognizer.cpp  stl_fwd.h
